--- a/template/header.html
+++ b/template/header.html
@@ -68,7 +68,7 @@
                                     <a href="#">About Us</a>
                                     <ul class="sub-menu">
                                         <li><a href="about.html">Our Company</a></li>
-                                        <li><a href="Employee.html">Employee Style</a></li>
+                                        <li><a href="/presentation/employee-style.html">Employee Style</a></li>
 
                                     </ul>
                                 </li>
@@ -226,7 +226,7 @@
                     <a href="#">About us</a>
                     <ul class="sub-menu">
                         <li><a href="#">Our Company</a></li>
-                        <li><a href="#">Employee Style</a></li>
+                        <li><a href="/presentation/employee-style.html">Employee Style</a></li>
                     </ul>
                 </li>
                 <li><a href="contact.html">Contact us</a></li>
