--- a/template/footer.html
+++ b/template/footer.html
@@ -21,10 +21,10 @@
 
                         <div class="footer-widget-menu">
                             <ul>
-                                <li><a href="#">Company</a></li>
-                                <li><a href="#">Service</a></li>
-                                <li><a href="#">Blog</a></li>
-                                <li><a href="#">Wechat</a></li>
+                                <li><a href="#">公司</a></li>
+                                <li><a href="#">客服</a></li>
+                                <li><a href="#">博客</a></li>
+                                <li><a href="#">微信</a></li>
                             </ul>
                         </div>
                     </div>
@@ -37,8 +37,8 @@
 
                         <div class="footer-widget-menu">
                             <ul>
-                                <li><a href="#">Help Center</a></li>
-                                <li><a href="#">Customer Service</a></li>
+                                <li><a href="#">帮助中心</a></li>
+                                <li><a href="#">客户服务</a></li>
                             </ul>
                         </div>
                     </div>
@@ -57,7 +57,7 @@
 
             <!--Right Start-->
             <div class="copyright-content" style="text-align: center">
-                <p>Copyright © 2021 Group9_PNG Inc. All Rights Reserved.</p>
+                <p>Group9_PNG Inc.版权所有©2021保留所有权利。</p>
             </div>
             <!--Right End-->
         </div>
