--- a/template/header.html
+++ b/template/header.html
@@ -14,45 +14,45 @@
                     <div class="site-main-nav">
                         <nav class="site-nav">
                             <ul>
-                                <li><a href="/index.php">Home</a></li>
+                                <li><a href="/index.php">主页</a></li>
                                 <li>
-                                    <a href="#">Shop <span class="new">New</span></a>
+                                    <a href="#">商店 <span class="new">new</span></a>
 
                                     <ul class="mega-sub-menu">
                                         <li class="mega-dropdown">
-                                            <a class="mega-title">FLOWERS BY COLOUR</a>
+                                            <a class="mega-title">按颜色分类</a>
 
                                             <ul class="mega-item">
-                                                <li><a href="Pink.html">Pink</a></li>
-                                                <li><a href="White.html">White</a></li>
-                                                <li><a href="Blue.html">Blue</a></li>
-                                                <li><a href="Orange.html">Orange</a></li>
-                                                <li><a href="Red.html">Red</a></li>
-                                                <li><a href="Yellow.html">Yellow</a></li>
+                                                <li><a href="Pink.html">粉色</a></li>
+                                                <li><a href="White.html">白色</a></li>
+                                                <li><a href="Blue.html">蓝色</a></li>
+                                                <li><a href="Orange.html">橘色</a></li>
+                                                <li><a href="Red.html">红色</a></li>
+                                                <li><a href="Yellow.html">黄色</a></li>
                                             </ul>
                                         </li>
                                         <li class="mega-dropdown">
-                                            <a class="mega-title">FLOWER VARIETIES</a>
+                                            <a class="mega-title">花的品种</a>
 
                                             <ul class="mega-item">
-                                                <li><a href="/trading/shop-list.html">Roses</a></li>
-                                                <li><a href="Lilies.html">Lilies</a></li>
-                                                <li><a href="Gerbera.html">Gerbera</a></li>
-                                                <li><a href="Carnations.html">Carnations</a></li>
+                                                <li><a href="/trading/shop-list.html">玫瑰</a></li>
+                                                <li><a href="Lilies.html">百合</a></li>
+                                                <li><a href="Gerbera.html">非洲菊</a></li>
+                                                <li><a href="Carnations.html">康乃馨</a></li>
                                             </ul>
                                         </li>
                                         <li class="mega-dropdown">
-                                            <a class="mega-title">FUNERAL FLOWERS</a>
+                                            <a class="mega-title">葬礼花朵</a>
 
                                             <ul class="mega-item">
-                                                <li><a href="Bestsellers.html">Bestsellers</a></li>
-                                                <li><a href="Sheaves.html">Sheaves</a></li>
-                                                <li><a href="Wreaths.html">Wreaths</a></li>
-                                                <li><a href="Arrangements.html">Arrangements</a></li>
+                                                <li><a href="Bestsellers.html">畅销</a></li>
+                                                <li><a href="Sheaves.html">花束</a></li>
+                                                <li><a href="Wreaths.html">花环</a></li>
+                                                <li><a href="Arrangements.html">应酬</a></li>
                                             </ul>
                                         </li>
                                         <li class="mega-dropdown">
-                                            <a class="mega-title">DEAL OF THE WEEK</a>
+                                            <a class="mega-title">本周优惠</a>
                                             <a class="menu-banner">
                                                 <img src="../assets/images/menu-banner.jpg" alt="">
                                             </a>
@@ -60,19 +60,19 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="#">Blog</a>
+                                    <a href="#">博客</a>
 
                                     <ul class="sub-menu">
                                         <li>
-                                            <a href="#">Blog</a>
+                                            <a href="#">博客</a>
                                             <ul class="sub-menu">
-                                                <li><a href="blog.html">Blog</a></li>
+                                                <li><a href="blog.html">博客</a></li>
                                                 <li><a href="blog-left-sidebar.html">Blog Left Sidebar</a></li>
                                                 <li><a href="blog-right-sidebar.html">Blog Right Sidebar</a></li>
                                             </ul>
                                         </li>
                                         <li>
-                                            <a href="#">Blog Single</a>
+                                            <a href="#">博客页面</a>
                                             <ul class="sub-menu">
                                                 <li><a href="blog-single-left-sidebar.html">Blog Single Left
                                                     Sidebar</a></li>
@@ -83,14 +83,14 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="#">About Us</a>
+                                    <a href="#">关于我们</a>
                                     <ul class="sub-menu">
-                                        <li><a href="about.html">Our Company</a></li>
-                                        <li><a href="Employee.html">Employee Style</a></li>
+                                        <li><a href="about.html">我们的公司</a></li>
+                                        <li><a href="Employee.html">员工风貌</a></li>
 
                                     </ul>
                                 </li>
-                                <li><a href="contact.html">Contact Us</a></li>
+                                <li><a href="contact.html">联系我们</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -99,7 +99,7 @@
                     <div class="header-meta-info">
                         <div class="header-search">
                             <form action="#">
-                                <input type="text" placeholder="Search">
+                                <input type="text" placeholder="搜索">
                                 <button><i class="icon-search"></i></button>
                             </form>
                         </div>
@@ -143,11 +143,11 @@
                             <a href="#" role="button" data-toggle="dropdown"><i class="icon-users"></i></a>
 
                             <ul class="dropdown-menu ">
-                                <li><a href="#">My Orders</a></li>
-                                <li><a href="#">Sign In</a></li>
-                                <li><a href="#">Register</a></li>
-                                <li><a href="#">My Account</a></li>
-                                <li><a href="#">Log Out</a></li>
+                                <li><a href="#">我的订单</a></li>
+                                <li><a href="#">登录</a></li>
+                                <li><a href="#">注册</a></li>
+                                <li><a href="#">我的账户</a></li>
+                                <li><a href="#">注销</a></li>
                             </ul>
                         </div>
                         <div class="header-account-list mini-cart">
@@ -185,7 +185,7 @@
     <div class="header-meta-info">
         <div class="header-search">
             <form action="#" class="search-form">
-                <input type="text" placeholder="Search our store">
+                <input type="text" placeholder="店内搜索">
                 <button><i class="icon-search" style="color: deeppink"></i></button>
             </form>
         </div>
@@ -194,56 +194,56 @@
     <div class="site-main-nav">
         <nav class="site-nav">
             <ul class="navbar-mobile-wrapper">
-                <li><a href="/index.php">Home</a></li>
+                <li><a href="/index.php">主页</a></li>
                 <li>
-                    <a href="#">Shop</a>
+                    <a href="#">商店</a>
 
                     <ul class="mega-sub-menu">
                         <li class="mega-dropdown">
-                        <li><a href="shop-grid-Spring.html">Spring</a></li>
-                        <li><a href="shop-grid-Summer.html">Summer</a></li>
-                        <li><a href="shop-grid-Autumn.html">Autumn</a></li>
-                        <li><a href="shop-grid-Winter.html">Winter</a></li>
-                        <li><a href="shop-grid-Plants.html">Plants</a></li>
-                        <li><a href="shop-grid-Birthday.html">Birthday</a></li>
-                        <li><a href="shop-grid-Wedding.html">Wedding</a></li>
-                        <li><a href="shop-grid-Sale.html">Sale</a></li>
+                        <li><a href="shop-grid-Spring.html">春季</a></li>
+                        <li><a href="shop-grid-Summer.html">夏季</a></li>
+                        <li><a href="shop-grid-Autumn.html">秋季</a></li>
+                        <li><a href="shop-grid-Winter.html">冬季</a></li>
+                        <li><a href="shop-grid-Plants.html">植物</a></li>
+                        <li><a href="shop-grid-Birthday.html">生日</a></li>
+                        <li><a href="shop-grid-Wedding.html">婚礼</a></li>
+                        <li><a href="shop-grid-Sale.html">畅销</a></li>
                         </li>
 
                     </ul>
                 </li>
                 <li>
-                    <a href="#">Blog</a>
+                    <a href="#">博客</a>
 
                     <ul class="sub-menu">
                         <li>
-                            <a href="#">Blog 1</a>
+                            <a href="#">博客 1</a>
                             <ul class="sub-menu">
-                                <li><a href="blog1.html">Blog 1-1</a></li>
-                                <li><a href="blog1-1.html">Blog1-2</a></li>
-                                <li><a href="blog1-2.html">Blog1-3</a></li>
+                                <li><a href="blog1.html">博客 1-1</a></li>
+                                <li><a href="blog1-1.html">博客 1-2</a></li>
+                                <li><a href="blog1-2.html">博客 1-3</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="#">Blog 2</a>
+                            <a href="#">博客 2</a>
                             <ul class="sub-menu">
-                                <li><a href="blog2-1.html">Blog2-1</a></li>
-                                <li><a href="blog2-2.html">Blog2-2</a></li>
+                                <li><a href="blog2-1.html">博客 2-1</a></li>
+                                <li><a href="blog2-2.html">博客 2-2</a></li>
                             </ul>
                         </li>
                     </ul>
 
                 </li>
                 <li>
-                    <a href="#">Pages</a>
+                    <a href="#">页面</a>
                     <ul class="sub-menu">
-                        <li><a href="about.html">About Us</a></li>
-                        <li><a href="cart.html">Cart</a></li>
-                        <li><a href="wishlist.html">Wishlist</a></li>
-                        <li><a href="checkout.html">Checkout</a></li>
+                        <li><a href="about.html">关于我们</a></li>
+                        <li><a href="cart.html">购物车</a></li>
+                        <li><a href="wishlist.html">愿望单</a></li>
+                        <li><a href="checkout.html">结账</a></li>
                     </ul>
                 </li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html">联系我们</a></li>
             </ul>
         </nav>
     </div>
