--- a/chat/application/index/view/index/lists.html
+++ b/chat/application/index/view/index/lists.html
@@ -43,10 +43,11 @@
 </body>
 <script>
 
-    var API_URL = "http://chat.com/index.php/api/chat/";
+    // var API_URL = "http://chat.com/index.php/api/chat/";
+    var API_URL = "http://42.193.97.82/index.php/api/chat/";
     var fromid ={$fromid};
 
-    ws = new WebSocket("ws://127.0.0.1:8282");
+    ws = new WebSocket("ws://42.193.97.82:8282");
 
 	ws.onmessage=function(e){
 		var message = eval("("+ e.data+")");
