--- a/template/header.html
+++ b/template/header.html
@@ -69,7 +69,7 @@
                                     <ul class="sub-menu">
                                         <li><a href="about.html">Our Company</a></li>
                                         <li><a href="/presentation/employee-style.html">Employee Style</a></li>
-
+                                        <li><a href="/sunrise/sunrise.html">Sunrise</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="contact.html">Contact Us</a></li>
@@ -227,6 +227,7 @@
                     <ul class="sub-menu">
                         <li><a href="#">Our Company</a></li>
                         <li><a href="/presentation/employee-style.html">Employee Style</a></li>
+                        <li><a href="/sunrise/sunrise.html">Sunrise</a></li>
                     </ul>
                 </li>
                 <li><a href="contact.html">Contact us</a></li>
