--- a/template/header-zh.html
+++ b/template/header-zh.html
@@ -69,7 +69,7 @@
                                     <ul class="sub-menu">
                                         <li><a href="about.html">公司简介</a></li>
                                         <li><a href="/presentation/employee-style.html">员工风采</a></li>
-
+                                        <li><a href="/sunrise/sunrise.html">日出</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="contact.html">联系我们</a></li>
@@ -227,6 +227,7 @@
                     <ul class="sub-menu">
                         <li><a href="#">公司简介</a></li>
                         <li><a href="/presentation/employee-style.html">员工风采</a></li>
+                        <li><a href="/sunrise/sunrise.html">日出</a></li>
                     </ul>
                 </li>
                 <li><a href="contact.html">联系我们</a></li>
