--- a/style/style.css
+++ b/style/style.css
@@ -6,62 +6,78 @@
     background: black;
 }
 
-.pre-header ul{
+.pre-header ul {
     text-align: left;
 }
-.pre-header img{
-    width:20px;
-    height:20px;
+
+.pre-header img {
+    width: 20px;
+    height: 20px;
 }
-.flower{
+
+.flower {
     float: left;
 }
-.flower img{
+
+.flower img {
     width: 40px;
     height: 40px;
 }
-.second-header .logo{
+
+.second-header .logo {
     text-align: center;
 }
-.navigation{
+
+.navigation {
     text-align: center;
 }
-.bg{
-    height:60px;
+
+.bg {
+    height: 60px;
     text-align: center;
     line-height: 60px;
     position: relative;
-    background-color: rgba(0,0,0,.5);
+    background-color: rgba(0, 0, 0, .5);
 
 }
-.carousell img{
+
+.carousell img {
     max-width: 60%;
     max-height: 30%;
 }
-#about_us{
+
+#about_us {
     margin: auto;
     width: 800px;
-  }
-  
-  #about_main {
+}
+
+#about_main {
     padding: 20px;
-  }
-  
-  #about_us p {
+}
+
+#about_us p {
     text-align: justify;
     font-size: initial;
-  }
-  
-  #about_us h1 {
+}
+
+#about_us h1 {
     margin: 20px 0;
-  }
-  
-  #background {
+}
+
+#background {
     background-image: url('../images/background1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-  }
+}
 
+.blog-image {
+    height: 280px;
+    overflow: hidden;
+}
+
+.new-product-area{
+    padding: 50px 0;
+}
 /*.dropdown{*/
 /*    color: white;*/
 /*    border-bottom: 1px solid #eee;*/
