staff portal orders

--- a/template/footer-zh.html
+++ b/template/footer-zh.html
@@ -7,8 +7,8 @@
                 <!--Footer Widget Start-->
                 <div class="col-lg-4 col-md-6">
                     <div class="footer-widget">
-                        <a class="footer-logo" href="#"><img src="/assets/images/logo/logo2.png" alt=""></a>
-                        <div class="footer-widget-text">
+<!--                        <a class="footer-logo" href="#"><img src="/assets/images/logo/logo2.png" alt=""></a>-->
+                        <div class="footer-widget-text" style="padding-top: 58px">
                             <p>Group 9: Programmers Never Give Up</p>
                         </div>
                     </div>
@@ -17,7 +17,7 @@
 
                 <div class="col-lg-2 col-md-4 col-sm-6">
                     <div class="footer-widget">
-                        <h4 class="footer-widget-title">About Us</h4>
+                        <h4 class="footer-widget-title">关于我们/h4>
 
                         <div class="footer-widget-menu">
                             <ul>
@@ -33,7 +33,7 @@
 
                 <div class="col-lg-2 col-md-4 col-sm-6">
                     <div class="footer-widget">
-                        <h4 class="footer-widget-title">Help</h4>
+                        <h4 class="footer-widget-title">帮助</h4>
 
                         <div class="footer-widget-menu">
                             <ul>
