--- a/template/footer.html
+++ b/template/footer.html
@@ -7,8 +7,8 @@
                 <!--Footer Widget Start-->
                 <div class="col-lg-4 col-md-6">
                     <div class="footer-widget">
-                        <a class="footer-logo" href="#"><img src="/assets/images/logo/logo2.png" alt=""></a>
-                        <div class="footer-widget-text">
+<!--                        <a class="footer-logo" href="#"><img src="/assets/images/logo/logo2.png" alt=""></a>-->
+                        <div class="footer-widget-text" style="padding-top: 58px">
                             <p>Group 9: Programmers Never Give Up</p>
                         </div>
                     </div>
