--- a/template/footer-zh.html
+++ b/template/footer-zh.html
@@ -17,7 +17,7 @@
 
                 <div class="col-lg-2 col-md-4 col-sm-6">
                     <div class="footer-widget">
-                        <h4 class="footer-widget-title">关于我们/h4>
+                        <h4 class="footer-widget-title">关于我们</h4>
 
                         <div class="footer-widget-menu">
                             <ul>
